# students-entertainment

./: .gitignore  data.json  dump.rdb  pyproject.toml
config/: settings.py  urls.py
main/: admin.py  forms.py  models.py  sevices.py  urls.py  views.py
main/management/commands/: fill.py  test_command.py
main/migrations/: 0001_initial.py  0002_student_is_active.py  0003_subject.py  0004_student_email.py  0005_alter_subject_student.py  0006_alter_subject_student.py
templates/: base.html
templates/main/: student_confirm_delete.html  student_detail.html  student_form.html  student_list.html
templates/registration/: login.html
templates/users/: user_form.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
